controller test created, and Exception handlers created